# heatcluster

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  heatcluster.yml  pypi.yml
assets/examples/: generate_examples.sh
docs/: README.md
src/heatcluster/: __init__.py  cli.py  parse_files.py
test/: PDG000000136.1.reference_target.SNP_distances.tsv  bindash_example.txt  dashing_example.txt  example.nwk  ezaai_example.txt  fastani_example.txt  gene_presence_absence.Rtab  iqtree_example.mldist  kwip_example.txt  manifest.csv  mash_example.txt  poppunk_db.dists.npy  poppunk_db.dists.pkl  pyani_example_hadamard.tab  pyani_example_percentage_identity.tab  pyani_example_similarity_errors.tab  ska_example.distances.tsv  skani_example.txt  sourmash_example.csv  test_features.py  test_logic.py  test_manifest.py  test_parsers.py
