[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heatcluster"
version = "1.3.0"
description = "A Python tool for visualizing SNP matrices with hierarchical clustering"
readme = "README.md"
authors = [
  { name = "Stephen Beckstrom-Sternberg", email = "stephen.beckstrom-sternberg@azdhs.gov" },
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "seaborn>=0.11.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "scikit-learn",
    "fastcluster",
    "biopython",
]

[project.urls]
"Homepage" = "https://github.com/DrB-S/heatcluster"
"Bug Tracker" = "https://github.com/DrB-S/heatcluster/issues"

[project.scripts]
heatcluster = "heatcluster.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*", "tests*", "docs*"]